Make access to StressorRecord.confirmations synchronized (to avoid ConcModExceptions)